# func-statcast

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
HttpTrigger1/: __init__.py
TimerTrigger1/: __init__.py  function.json
