[tool.poetry]
name = "func-statcast"
version = "0.1.0"
description = ""
authors = ["Isaac Lee <isaacrlee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
azure-functions = "^1.3.0"
pandas = "^1.0.5"
pybaseball = "^1.0.8"
pymysql = "^0.10.0"
sqlalchemy = "^1.3.18"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
